@@ -24,6 +24,9 @@
 #include <glib.h>
 #include <string.h>
 #include <loudmouth/loudmouth.h>
+#ifdef __WIN32__
+#include <winsock2.h>
+#endif
 #include "lm-internals.h"
 
 #define USAGE "Usage: test-lm <server> <username> <password>\n"
@@ -57,7 +60,7 @@ connection_open_cb (LmConnection *connection, gboolean result, UserInfo *info)
 	g_print ("Connected callback\n");
 	lm_connection_authenticate (connection,
 				    info->name, info->passwd, "TestLM",
-				    FALSE, authentication_cb, NULL, NULL);
+				    authentication_cb, NULL,FALSE,  NULL);
 	g_print ("Sent auth message\n");
 }
 
@@ -81,11 +84,42 @@ main (int argc, char **argv)
 	LmMessageHandler *handler;
 	gboolean          result;
 	UserInfo         *info;
+#ifdef __WIN32__
+	WORD wVersionRequested;
+	WSADATA wsaData;
+	int err;
+#endif
 	
 	if (argc < 4) {
 		g_print (USAGE);
 		return 1;
 	}
+
+/* Needed to build on Win32. */
+#ifdef __WIN32__
+	wVersionRequested = MAKEWORD( 2, 2 );
+
+	err = WSAStartup( wVersionRequested, &wsaData );
+	if ( err != 0 ) {
+		/* Tell the user that we could not find a usable */
+		/* WinSock DLL.                                  */
+		return;
+	}
+
+	/* Confirm that the WinSock DLL supports 2.2.*/
+	/* Note that if the DLL supports versions greater    */
+	/* than 2.2 in addition to 2.2, it will still return */
+	/* 2.2 in wVersion since that is the version we      */
+	/* requested.                                        */
+
+	if ( LOBYTE( wsaData.wVersion ) != 2 ||
+			HIBYTE( wsaData.wVersion ) != 2 ) {
+		/* Tell the user that we could not find a usable */
+		/* WinSock DLL.                                  */
+		WSACleanup( );
+		return;
+	}
+#endif
 
         connection = lm_connection_new (argv[1]);
 
